--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+body {}
+
+
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
